fixed some spacing on about page, hireMepage, image size on index page

--- a/css/desktopIndexStyles.css
+++ b/css/desktopIndexStyles.css
@@ -32,12 +32,15 @@ div.content {
 /* For mobile */
 @media screen and (min-width: 100px) and (max-width: 800px)  {
 	.developer-img img {
-		width: 40%;
-		height: 50%;
+		/*width: 40%;
+		height: 50%;*/
+		width: 300px;
+		height: 300px;
 	}
 	.developer-img {
 		display: flex;
 		justify-content: center;
+		margin-bottom: 2em;
 	}
 }
 .action-message  {
